<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cicada</string>
    <string name="service_name">Cicada Service</string>
    <string name="starting">Starting Cicada Service...</string>
    <string name="running">Cicada Service is Running.</string>
    
    <string name="service_running_toggle_label">Cicada Service is Running</string>
    <string name="service_stopped_toggle_label">Cicada Service is Stopped</string>
    
    <string name="error_mac">Please set the Watch MAC in the Settings menu first.</string>
    
    <string name="app_list_service_name">Cicada App List</string>
    
    <string name="welcome_on_screen">Welcome\nto Cicada</string>
    <string name="waiting_for_idle_screen">Waiting for\nidle screen\nto update...</string>
    
    <!-- Displayed in the service's ongoing notification -->
    <string name="notification_title">Cicada is connected to your MetaWatch</string>
    <string name="notification_body">Select to configure or stop Cicada.</string>
    
    <!-- Widget Setup -->
    <string name="widget_setup">Widget Setup</string>
    <string name="menu_label_widget_setup">Widget Setup</string>
    <string name="label_top_widget">Top Widget</string>
    <string name="label_middle_widget">Middle Widget</string>
    <string name="label_bottom_widget">Bottom Widget</string>
    <string name="no_widgets_set_up">No widgets setup yet!\n\nUse the Cicada phone app to\nset them up.</string>
    
    <!-- Hotkey Setup -->
    <string name="hotkey_setup">Hotkey Setup</string>
    <string name="menu_label_hotkey_setup">Hotkey Setup</string>
    <string name="label_middle_left_button">Middle-Left Button</string>
    <string name="label_middle_right_button">Middle-Right Button</string>
    <string name="label_bottom_right_button">Bottom-Right Button</string>
    
    <!-- Device Service -->
    <string name="device_service_name">Device Service</string>
    
    <!-- Settings -->
    <string name="settings_activity_title">Cicada Settings</string>
    <string name="menu_label_settings">Settings</string>
</resources>
