<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_top_widget"
    />
<Spinner 
    android:id="@+id/top_widget_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_middle_widget"
    />
<Spinner 
    android:id="@+id/middle_widget_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_bottom_widget"
    />
<Spinner 
    android:id="@+id/bottom_widget_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
</LinearLayout>
